更新项目配置和文档

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,10 @@
 # API配置
+# API_KEY: 火山方舟大模型服务的访问凭证，用于身份验证
+# 获取方式：
+# 1. 访问火山引擎控制台：https://console.volcengine.com/ark
+# 2. 进入火山方舟 API key 管理页面
+# 3. 点击创建新的 API Key
+# 文档参考：https://www.volcengine.com/docs/82379/1302007
 API_KEY=your_api_key_here
 
 # 服务器配置
