优化Vercel部署配置，完善路由规则和环境变量设置

--- a/vercel.json
+++ b/vercel.json
@@ -26,6 +26,12 @@
       "dest": "frontend/index.html"
     }
   ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ],
   "env": {
     "API_KEY": "@api_key"
   }
