--- a/vercel.json
+++ b/vercel.json
@@ -1,36 +1,11 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "backend/server.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "frontend/**/*",
-      "use": "@vercel/static",
-      "config": {
-        "distDir": "frontend"
-      }
-    }
-  ],
+  "buildCommand": "cd backend && npm install",
+  "outputDirectory": "frontend",
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "/backend/server.js"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/css/(.*)",
-      "dest": "/frontend/css/$1"
-    },
-    {
-      "src": "/js/(.*)",
-      "dest": "/frontend/js/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/index.html"
     }
   ]
 }
